Fix for: MDEV-5221: User auto-creation does not work upon GRANT <role>